Fixed auto test commands execution.